refactor: Clean up project structure and enhance code quality
- Remove outdated documentation files and example classes
- Add comprehensive architecture testing with ArchUnit
- Enhance Lombok integration with checkstyle configuration
- Improve test coverage across all AWS client modules
- Add security vulnerability testing and fixes
- Standardize project structure and dependencies

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>